--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pertemuan 1</title>
+    <title>Halaman Pertama</title>
 </head>
 <body>
-    <p>Rif'an</p>
-    <h5>bab 1</h5>
+    <h1>Halo, World!</h1>
+    <p>Saya Rusdi.</p>
+    <img src="images.jpeg" alt="rusdi">
+
+    <table border="2" cellpadding="10">
+        <tr>
+            <th>nama</th>
+            <th>npm</th>
+            <th>kelas</th>
+        </tr>
+        <tr>
+            <td>Rif'an</td>
+            <td>2417052016</td>
+            <td>SI24</td>
+        </tr>
+    </table>
+    <form action="#">
+        <label for="nama">Masukkan nama</label>
+        <input type="text" placeholder="nama lengkap">
+        <br>
+        <br>
+        <input type="password" placeholder="password">
+        <br>
+        <br>
+        <input type="number" placeholder="nomor">
+        <br>
+        <br>
+        <input type="date" placeholder="tanggal">
+            
+        <button type="submit">Simpan</button>
+    </form>
+    
+    <a href="https://www.google.com" target="_blank">Google</a>
     <br>
-    <h2>HTML Dasar</h2>
+    <a href="#top">atas</a>
 </body>
 </html>
